# learn-homework-1

./: 1_if1.py  2_if2.py  3_for.py  4_while1.py  5_while2.py  6_exception1.py  7_exception2.py  8_ephem_bot.py  pyproject.toml  settings.py  setup.cfg
