[tool.poetry]
name = "learn-homework-1"
version = "0.1.0"
description = ""
authors = ["ZorkinRA"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.16.0"
glom = "^22.1.0"
mypy = "^0.931"
ephem = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
